fixed html overflow bug causing 2 scrollbars

--- a/css/workless.css
+++ b/css/workless.css
@@ -40,9 +40,9 @@ Base
 -------------------------------------------------------------------------------------------------------
 */
 
-html, body { margin-top: 40px; width: 100%; height: 100%; min-height: 100%; background: #e8e4e7; overflow-x: hidden; }
+html, body { margin-top: 40px; width: 100%; background: #e8e4e7; }
 html { font-size: 100%; -webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; }
-body { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 13px; line-height: 1.231; text-rendering: optimizeLegibility; margin: 0; }
+body { height: 100%; min-height: 100%; font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 13px; line-height: 1.231; text-rendering: optimizeLegibility; margin: 0;  overflow-x: hidden; }
 body, button, input, select, textarea { font-family: sans-serif; color: #333333; }
 
 ::-moz-selection { background: #fe57a1; color: #ffffff; text-shadow: none; }
